# pyama-web

./: .gitignore  CLAUDE.md  LICENSE  Liscator.sh  PyamaNotebook.ipynb  README.md  app.py  nd2_paths.txt  out_paths.txt  package.json  paths.csv  pyama_util.py  requirements.txt  rxconfig.py  start-dev.sh  start-electron.sh  start-tauri.sh
.claude/: settings.local.json
backend/: main.py  pyproject.toml
backend/app/: main.py  models.py
backend/app/core/: config.py
backend/app/routers/: analysis.py  files.py  images.py
backend/app/services/: cell_viewer.py  utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: main.js  preload.js
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: AnalysisPage.tsx  DocumentationPage.tsx  HomePage.tsx  PreprocessPage.tsx  ViewPage.tsx
frontend/src/services/: api.ts
misc/: app.py  gui.py
misc/notebook/: notebook.py
misc/static/: api.js  ui.js
misc/templates/: index.html  layout.html  layout_analysis.html  preprocess.html
static/: keyboard_shortcuts.js  selection.js
templates/: analysis.html  documentation.html  view.html
