[project]
name = "pyama-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "python-multipart==0.0.19",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "scikit-image>=0.22.0",
    "scipy>=1.11.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "h5py>=3.10.0",
    "imageio>=2.30.0",
    "nd2reader>=3.3.0",
    "PIMS>=0.6.0",
    "PyWavelets>=1.5.0",
    "tifffile>=2024.1.0",
    "plotly>=5.24.0",
    "numba>=0.58.0",
    "requests>=2.31.0",
]
